cluster/ingress/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cluster  
  namespace: cluster
spec:
  ingressClassName: nginx
  rules:
    - host: cluster.tsemach.org
      http:
        paths:
        - backend:
            service:
              name: nestjs-service
              port: 
                number: 3000
          path: /
          pathType: Prefix

        # - path: /
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: nestjs-service
        #       port:
        #         number: 3000
